@@ -26,6 +26,10 @@ Yang Tse (7 Aug 2008)
 - Prevent buildconf from removing 'Makefile' and 'missing' files. This would
   blow away our CVS checked files 'missing' and 'hiper/Makefile'.
 
+- Remove adjustment done to testcurl.pl to verify if change introduced by
+  Guenter Knauf in lib/Makefile.netware is enough to get the netware autobuilds
+  going again.
+
 Yang Tse (5 Aug 2008)
 - Changes done to buildconf script. Validate that autom4te and autoconf, as
   well as aclocal and automake, versions match. Improve removal of previous
